--- a/templates/svgthrowchatmsg.html
+++ b/templates/svgthrowchatmsg.html
@@ -8,7 +8,7 @@
         {{/if}}
     </header>
     <div class="message-content" style="margin:5px 0px;">
-        <div class="card-content"></div>
+        <!--div class="card-content"></div-->
 	    <div class="form-group sheet actor">
             <ol class="items-list inventory-list" style="overflow-y: visible;">
                 <li class="items-header flexrow">
